# Codify

./: README.md  convert_deepseek_to_coreml.py  create_visx.py
Code.xcodeproj/: project.pbxproj
CodeApp/: CodeApp.swift  Info.plist
CodeApp/Containers/: ExtensionsContainer.swift  MainScene.swift
CodeApp/Managers/: Executor.swift  ExtensionManager.swift  MainApp.swift  RightPanelManager.swift  WebViewBase.swift
CodeApp/Services/: AgentService.swift  CoreMLInference.swift  CoreMLLLMService.swift  CoreMLModelHandler.swift  DebuggerService.swift  DebuggerServiceUnified.swift  ExtensionInstaller.swift  InlineCompletionService.swift  LLMTokenizer.swift  MarketplaceService.swift  VISXService.swift  VisxExtractor.swift  WasminspectMIAdapter.swift  WasminspectService.swift
CodeApp/Utilities/: CommandRegistry.swift  python.swift  wasm.swift  wasmer.swift
CodeApp/Views/: ActivityBar.swift  AgentView.swift  ChatView.swift  DebuggerSidebarView.swift  EditorContextMenu.swift  ExtensionSettingsView.swift  ExtensionsView.swift  ModelSettingsView.swift  RightPanelView.swift  SettingsView.swift  VISXPackageManager.swift  WasminspectSidebarView.swift
Extensions/ChatAssistant/: ChatExtension.swift
examples/node-utils/: README.md  index.js  (+2 more)
wasmer-ios/: Cargo.toml  README.md  build.rs  build_python_xcframework.sh  build_xcframework.sh  test_examples.sh
wasmer-ios/.claude/: settings.local.json
wasmer-ios/include/: wasmer_python.h
wasmer-ios/src/: lib.rs
web/: .env.example  .gitignore  README.md  package.json  server.js  start.sh  test_visx_server.sh  wasminspect.visx
(+17 files in other folders)
